--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,8 @@
     <title>ShopPulse SG</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="/shoppulse.png">
+    <link rel="apple-touch-icon" href="/shoppulse.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet">
